--- a/PhotoGallery/app/src/main/AndroidManifest.xml
+++ b/PhotoGallery/app/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.illum.photogallery">
-    <permission android:name="com.example.illum.photogallery.PRIVATE"
-                android:protectionLevel="signature" />
+
+    <permission
+        android:name="com.example.illum.photogallery.PRIVATE"
+        android:protectionLevel="signature"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="com.example.illum.photogallery.PRIVATE" />
+    <uses-permission android:name="com.example.illum.photogallery.PRIVATE"/>
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".PhotoPageActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name=".PhotoGalleryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,18 +28,21 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <service android:name=".PollService"/>
+
         <receiver android:name=".StartupReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-        <receiver android:name=".NotificationReceiver"
-                  android:exported="false">
+        <receiver
+            android:name=".NotificationReceiver"
+            android:exported="false">
             <intent-filter
                 android:priority="-999">
                 <action
-                    android:name="com.example.illum.photogallery.SHOW_NOTIFICATION" />
+                    android:name="com.example.illum.photogallery.SHOW_NOTIFICATION"/>
             </intent-filter>
         </receiver>
     </application>
